<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LotteryAppActivity!</string>
    <string name="app_name">LotteryApp</string>
	<string name="chooseNumbers">Add this number</string>
	<string name="OKButton">OK</string>
	<string name="CANCELButton">Cancel</string>
	<string name="deleteNumbers">Are you sure you want to delete all numbers?</string>
	<string name="clearNumbers">Delete all numbers of the ticket</string>
	<string name="deleteLastNumber">Delete previous Number</string>
	<string name="generateTicketButton">Generate the ticket</string>
	<string name="loadTicketButton">Load a ticket</string>
	<string name="saveTicketButton">Save the ticket</string>
	<string name="ticketCreated">Lottery Ticket</string>
	<string name="nameOfNumber">Numbers:</string>
	<string name="chooseTicketToLoad">Ticket:</string>
	<string name="quit">Quit</string>
	<string name="showTicket">Show actual Ticket</string>
	<string name="ticketNumber">Ticket Number: </string>
	<string name="id">Ticket ID:</string>
	<string name="createNewTicket">Create new Ticket</string>
	<string name="back">Back</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="creationDate">Creation date:</string>
	<string name="successfullyDeleted">Ticket number: %1$s successfully deleted</string>
	<string name="successfullyEdited">Ticket number: %1$s successfully changed</string>
	<string name="successfullyCreated">Ticket number: %1$s successfully created</string>
	<string name="deleteTicket">Are you sure you want to delete the ticket: %1$s?</string>
	<string name="fetchedDate">Fetched date:</string>
	<string name="showLastDraw">LAST DRAW</string>
	<string name="myTickets">MY TICKETS</string>
	<string name="validateTickets">Validate Tickets</string>
	<string name="validateTicket">Validate Ticket</string>
	<string name="newTicketAvailable">A new lottery ticket is available</string>
	<string name="newTicketAvailableNotification">WINNER WINNER, CHICKEN DINNER?!</string>
	<string name="messageAfterVerifiedWin">Congratulations, %1$s of your tickets have at least one right number</string>
	<string name="messageAfterVerifiedLose">No winning ticket.</string>
	<string name="messageAfterVerifiedTicketWin">Congratulations, %1$s of your numbers in this ticket are right.</string>
	<string name="messageAfterVerifiedTicketLose">No right numbers.</string>
</resources>